Add main menu and change some colors